Bug fixes and updates.
- Update the postgresql library for Postgresql 12.
- Work around a bug in which TB-Loader incorrectly named an output file.
- Add javax.annotation-api as a dependency. It seems that
  javax.annotations.Resource moved for Java 8. This hasn't been built in a
  while, so that change is just landing now.